@@ -75,6 +75,8 @@ Process error with messages (error, error_key/value pairs).
 
 =head1 EXAMPLE1
 
+=for comment filename=err_via_ansicolor_die.pl
+
  use strict;
  use warnings;
 
@@ -88,6 +90,8 @@ Process error with messages (error, error_key/value pairs).
 
 =head1 EXAMPLE2
 
+=for comment filename=err_via_ansicolor_die_with_params.pl
+
  use strict;
  use warnings;
 
@@ -100,6 +104,8 @@ Process error with messages (error, error_key/value pairs).
  # 123 at ../err_via_ansicolor_die_with_params.pl line 9.
 
 =head1 EXAMPLE3
+
+=for comment filename=err_via_ansicolor_die_with_params_in_eval_and_dump.pl
 
  use strict;
  use warnings;
