@@ -75,6 +75,8 @@ Process error with messages (error, error_key/value pairs).
 
 =head1 EXAMPLE1
 
+=for comment filename=err_via_ansicolor_print_var.pl
+
  use strict;
  use warnings;
 
@@ -87,6 +89,8 @@ Process error with messages (error, error_key/value pairs).
  # 1
 
 =head1 EXAMPLE2
+
+=for comment filename=err_via_ansicolor_print_var_with_params.pl
 
  use strict;
  use warnings;
@@ -101,6 +105,8 @@ Process error with messages (error, error_key/value pairs).
  # 2: 3
 
 =head1 EXAMPLE3
+
+=for comment filename=err_via_ansicolor_print_var_with_params_from_module.pl
 
  package Example3;
 
