@@ -6,20 +6,20 @@ ANSIColor/ErrorList.pm
 ANSIColor/Print.pm
 ANSIColor/PrintVar.pm
 Changes
-examples/ex1.pl
-examples/ex10.pl
-examples/ex11.pl
-examples/ex12.pl
-examples/ex13.pl
-examples/ex14.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
-examples/ex6.pl
-examples/ex7.pl
-examples/ex8.pl
-examples/ex9.pl
+examples/err_via_ansicolor_all_error.pl
+examples/err_via_ansicolor_die.pl
+examples/err_via_ansicolor_die_with_params.pl
+examples/err_via_ansicolor_die_with_params_in_eval_and_dump.pl
+examples/err_via_ansicolor_error.pl
+examples/err_via_ansicolor_error_list.pl
+examples/err_via_ansicolor_error_list_in_eval_plus_err.pl
+examples/err_via_ansicolor_error_list_with_params.pl
+examples/err_via_ansicolor_error_with_params.pl
+examples/err_via_ansicolor_print.pl
+examples/err_via_ansicolor_print_from_module.pl
+examples/err_via_ansicolor_print_var.pl
+examples/err_via_ansicolor_print_var_with_params.pl
+examples/err_via_ansicolor_print_var_with_params_from_module.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
