@@ -4,6 +4,7 @@
  - Fix EXAMPLEs in Die doc.
  - Fix minimal dependency for List::Util.
  - Improve SYNOPSIS section by common usage with Error::Pure.
+ - Rewrite example files to better names.
 
 0.28 2022-12-14T08:39:59+01:00
  - Fix links in doc.
